# jdk12

./: .gitignore  .java-version  CMakeLists.txt
src/hotspot/share/gc/serial/: tenuredGeneration.cpp
src/hotspot/share/interpreter/: bytecodeInterpreter.cpp
src/hotspot/share/oops/: markOop.hpp
src/hotspot/share/runtime/: sharedRuntime.cpp
src/java.base/share/native/libjli/: java.c
